log/build_2023-03-08_14-16-17/qbert_py_movement/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/install/qbert_py_movement/lib/python3.10/site-packages/qbert_py_movement/reactor.py", line 34
    threat_direction = functools.reduce(lambda: a,b : max(x, accum), threats)
                                                    ^
SyntaxError: invalid syntax

